[package]
name = "ghost_shell"
version = "0.1.0"
edition = "2021"
authors = ["unclesp1d3r <unclesp1d3r@protonmail.com>"]
description = "A simple shell over a secure channel"
license = "MIT"


[dependencies]
bincode = "1.3.3"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "std"] }
clap = { version = "4.1.4", features = ["wrap_help", "cargo", "env", "derive"] }
generic-array = "0.14.6"
hkdf = { version = "0.12.3", features = ["std"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"


[[bin]]
name = "ghost_shell_server"
path = "src/server.rs"

[[bin]]
name = "ghost_shell_client"
path = "src/client.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
