[package]
name = "ghost_shell"
version = "0.1.0"
edition = "2021"
authors = ["unclesp1d3r <unclesp1d3r@protonmail.com>"]
description = "A lightweight and fast remote shell that provides secure communication between a client and a server."
repository = "https://github.com/unclesp1d3r/ghost_shell"
license = "MIT"
categories = ["network-programming", "cryptography", "command-line-utilities"]
keywords = ["shell", "encryption", "noise", "security"]
readme = "README.md"
exclude = [
    "target/",
    ".git/",
    ".vscode/",
    "Cargo.lock",
    ".gitignore",
    ".travis.yml",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
]

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
console = "0.15.5"
dialoguer = { version = "0.10.3" }
futures = "0.3.26"
ring = "0.16.20"
serde = { version = "1.0.152", features = ["derive"] }
snow = { version = "0.9.1", features = ["byteorder", "ring-accelerated"] }
snowstorm = { version = "0.4.0", features = ["ring-accelerated"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "futures-io", "full"] }


[[bin]]
name = "ghost_shell_server"
path = "src/server.rs"

[[bin]]
name = "ghost_shell_client"
path = "src/client.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
